Fixed alignment of hamburger menu and horizontal menu in the header

--- a/Week 2/buzzfeed.css
+++ b/Week 2/buzzfeed.css
@@ -1,9 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,400&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: "Roboto", sans-serif;
+}
+
 /* Hamburger - Edition drop down menu*/
 .dropbtn {
   background-color: whitesmoke;
   color: white;
-  padding: 16px;
-  font-size: 16px;
+  padding: 70px;
   border: thin;
   cursor: pointer;
 }
@@ -86,10 +98,7 @@
 }
 
 /* Extra Things */
-body {
-  background: #eee;
-  font-family: "Open Sans", sans-serif;
-}
+
 h3 {
   font-size: 30px;
   font-weight: 400;
@@ -101,18 +110,6 @@ h3 i {
 }
 
 /* Hamburger Menu */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,400&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-  font-family: "Roboto", sans-serif;
-}
 
 li {
   list-style: none;
@@ -131,7 +128,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: left;
-  padding: 1rem 1.5rem;
+  padding: 45px 0 0 70px;
 }
 
 .bar {
@@ -151,13 +148,13 @@ a {
 }
 
 .column-left .nav-link {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-weight: 400;
   color: #000;
 }
 
 .column-right .nav-link {
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 400;
   color: #fff;
 }
@@ -183,7 +180,7 @@ a {
 
 .nav-menu {
   position: fixed;
-  top: 5rem;
+  top: 10rem;
   flex-direction: column;
   background-color: #fff;
   width: 50%;
@@ -195,17 +192,11 @@ a {
 
 .nav-item {
   display: none;
-  margin: 2.5rem 0;
 }
 
 .hamburger {
   display: block;
   cursor: pointer;
-}
-
-.hamburger-logo {
-  display: inline;
-  vertical-align: text-bottom;
 }
 
 .hamburger:active .bar:nth-child(2) {
@@ -224,10 +215,17 @@ a {
 /* Nav bar */
 
 /* logo */
-/* .navbar_image {
-  width: 100px;
+.navbar_image {
+  width: 120px;
   overflow: hidden;
-} */
+  vertical-align: top;
+}
+
+.hamburger-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /* Nav Bar  */
 ul {
@@ -238,12 +236,19 @@ ul {
   display: flex;
   justify-content: space-between;
   align-content: center;
+  font-size: 1.6rem;
 }
 
 li {
   display: block;
   margin: 0;
-  padding: 45px 0 0 30px;
+  padding: 45px 0 0px 30px;
+}
+
+li.nav-item {
+  display: block;
+  margin: 0;
+  padding: 10px 5px;
 }
 
 .header {
